WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309099
[Site Isolation] COOP test blob-popup.https.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=309099
Summary
[Site Isolation] COOP test blob-popup.https.html is crashing
rupin
Reported
2026-03-03 13:57:26 PST
[Site Isolation] COOP test imported/w3c/web-platform-tests/html/cross-origin-opener-policy/blob-popup.https.html is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 13:57:32 PST
<
rdar://problem/171659374
>
rupin
Comment 2
2026-03-03 14:14:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59827
EWS
Comment 3
2026-03-04 22:14:26 PST
Committed
308680@main
(0d45dd47678b): <
https://commits.webkit.org/308680@main
> Reviewed commits have been landed. Closing PR #59827 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug